# crema

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: publish-test.yml  publish.yml  tests.yml
crema/: __init__.py  confidence.py  crema.py  dataset.py  methods.py  params.py  parsers.py  qvalues.py  result.py  utils.py
crema/parsers/: comet.py  crux.py  msamanda.py  msfragger.py  msgf.py  mzid.py  mztab.py  pepxml.py  tide.py  txt.py
crema/writers/: txt.py
data/: MSV000085729.mzTab  example_psms_decoy.txt  example_psms_target.txt  msfragger.pepxml  multi_decoy.csv  multi_target.csv  single.csv  single_add_score.csv  single_add_spectrum.csv  single_basic.csv  single_basic_tab.txt  single_int_targets.csv  single_noncrux.csv  single_text_scan.csv
docs/: CHANGELOG.md  changelog.rst  cli.rst  conf.py  faq.rst  index.rst  notes.rst
docs/_static/: custom.css
docs/api/: confidence.rst  dataset.rst  functions.rst  index.rst  result.rst
docs/vignettes/: crema_basic_guide_api.ipynb  index.rst
tests/: conftest.py  fixtures.py  test_cli.py  test_crema.py  test_crema_methods.py  test_dataset.py  test_methods.py  test_parsers.py  test_result.py
tests/system_tests/: test_cli.py  test_crux_tdc.py
tests/unit_tests/: test_confidence.py  test_dataset.py  test_parsers.py  test_qvalues.py
