[metadata]
name = crema-ms
author = Andy Lin and William E. Fondrie
author_email = linandy@uw.edu and fondriew@gmail.com
description = Confidence estimation for proteomics experiments
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/noble-lab/crema
project_urls =
    Documentation = https://crema-ms.readthedocs.io
    Bug Tracker = https://github.com/noble-lab/crema/issues
license = Apache 2.0
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Topic :: Scientific/Engineering :: Bio-Informatics

[options]
packages = find:
python_requires = >=3.6
install_requires =
    numpy>=1.18.1
    pandas>=1.3.0
    numba>=0.48.0
    pyteomics>=4.4.2
    lxml>=4.6.3

[options.extras_require]
docs =
    numpydoc>=1.0.0
    sphinx-argparse>=0.2.5
    sphinx-rtd-theme>=0.5.0
    nbsphinx>=0.7.1
    ipykernel>=5.3.0
    recommonmark>=0.5.0
dev =
    pre-commit>=2.7.1
    black>=20.8b1

[options.entry_points]
console_scripts =
    crema = crema.crema:main
